# dontdoDrugsTryRust

./: Cargo.toml
hypermulti/: Cargo.toml
hypermulti/src/: main.rs
reqwest/src/: main.rs
