[package]
name = "hypermulti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
hyper-rustls = "0.22"


tokio = { version = "1", features = ["full"] }

hyper-multipart-rfc7578 = "0.7"